[gd_scene load_steps=6 format=3 uid="uid://htqrbvq1nhnm"]

[ext_resource type="Script" path="res://Scenes/Minigames/timing_minigame_test.gd" id="1_vndk6"]

[sub_resource type="LabelSettings" id="LabelSettings_4bdyv"]
font_size = 80

[sub_resource type="FontFile" id="FontFile_nct4l"]
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_mewrb"]
font = SubResource("FontFile_nct4l")
font_size = 50
font_color = Color(0.2, 0.682353, 0.352941, 1)
outline_size = 20
outline_color = Color(0.115311, 0.364845, 0.167886, 1)

[sub_resource type="LabelSettings" id="LabelSettings_227e3"]
font_size = 50
font_color = Color(0.82881, 2.71939e-06, 5.77569e-07, 1)
outline_size = 30
outline_color = Color(0.618933, 1.73271e-06, 3.85046e-07, 1)

[node name="TimingMinigameTest" type="Control"]
layout_mode = 3
anchor_right = 0.833
anchor_bottom = 0.988
offset_right = 0.383911
offset_bottom = -0.223999
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vndk6")

[node name="Minigame" type="Node" parent="."]

[node name="GameTimer" type="Timer" parent="Minigame"]
editor_description = "Test timer for timing minigame"
wait_time = 0.1

[node name="TimerLabel" type="Label" parent="Minigame"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -231.0
offset_top = -34.0
offset_right = 7.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0, 100)
text = "Timer: 0.0"
label_settings = SubResource("LabelSettings_4bdyv")
vertical_alignment = 1

[node name="SuccessLabel" type="Label" parent="Minigame"]
visible = false
offset_left = 370.0
offset_top = 187.0
offset_right = 624.0
offset_bottom = 256.0
text = "Yippee!! :D"
label_settings = SubResource("LabelSettings_mewrb")
horizontal_alignment = 1

[node name="FailLabel" type="Label" parent="Minigame"]
visible = false
offset_left = 360.0
offset_top = 189.0
offset_right = 642.0
offset_bottom = 258.0
text = "You failed :("
label_settings = SubResource("LabelSettings_227e3")
horizontal_alignment = 1

[node name="InstructionTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="ReadyTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CountdownTimer" type="Timer" parent="."]

[node name="VBoxContainer_Instruction" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -344.0
offset_top = -69.0
offset_right = 344.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2

[node name="InstructionLabel" type="RichTextLabel" parent="VBoxContainer_Instruction"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center][font_size={50}]Click the button below when 
the timer turns[color=yellow][b] yellow [/b][/color]"
fit_content = true
autowrap_mode = 0

[node name="VBoxContainer_Ready" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -344.0
offset_top = -69.0
offset_right = 344.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReadyLabel" type="RichTextLabel" parent="VBoxContainer_Ready"]
visible = false
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center][font_size={80}]Ready?"
fit_content = true
autowrap_mode = 0

[node name="VBoxContainer_Countdown" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -344.0
offset_top = -69.0
offset_right = 344.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2

[node name="CountdownLabel" type="RichTextLabel" parent="VBoxContainer_Countdown"]
visible = false
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center][font_size={80}]"
fit_content = true
autowrap_mode = 0

[connection signal="timeout" from="Minigame/GameTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="InstructionTimer" to="." method="_on_instruction_timer_timeout"]
[connection signal="timeout" from="ReadyTimer" to="." method="_on_ready_timer_timeout"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
